version/0.1/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.1.1 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/releases/tag/v0.1.1>`_ - February 08, 2026
==============================================================================================================

.. tab-set::


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump actions/setup-python from 6.0.0 to 6.1.0
          - `#3 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/3>`_

        * - Bump actions/download-artifact from 6.0.0 to 7.0.0
          - `#7 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/7>`_

        * - Bump actions/upload-artifact from 5.0.0 to 6.0.0
          - `#8 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/8>`_

        * - Bump codecov/codecov-action from 5.5.1 to 5.5.2
          - `#16 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/16>`_, `#18 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/18>`_

        * - Bump actions/checkout from 6.0.1 to 6.0.2
          - `#19 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/19>`_

        * - Bump actions/setup-python from 6.1.0 to 6.2.0
          - `#20 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/20>`_

        * - Bump ansys/actions from 10.2.3 to 10.2.4
          - `#21 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/21>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Compatibility with pyaedt 0.24
          - `#17 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/17>`_

        * - Update installer metadata for ansys-aedt-toolkits-radar-explorer
          - `#24 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/24>`_

        * - Update installer to include PyVista and its dependencies
          - `#25 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/25>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update CHANGELOG for v0.1.0
          - `#10 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/10>`_

        * - Update version to \`\`0.2.dev0\`\` and modify its declaration in project
          - `#11 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/11>`_

        * - Use use-pull-request-title as use-conventional-commits is deprecated.
          - `#12 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/12>`_

        * - Update copyright headers to reference 2026.
          - `#13 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/13>`_

        * - Clean changelog
          - `#14 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/14>`_

        * - Add actions/check-vulnerabilities
          - `#22 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/22>`_


`0.1.0 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/releases/tag/v0.1.0>`_ - December 22, 2025
==============================================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Initial commit.
          - `#1 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/1>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump actions/download-artifact from 5.0.0 to 6.0.0
          - `#213 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/213>`_

        * - Bump actions/upload-artifact from 4.6.2 to 5.0.0
          - `#215 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/215>`_

        * - Bump actions/checkout from 5.0.0 to 6.0.1
          - `#219 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/219>`_

        * - Bump softprops/action-gh-release from 2.3.3 to 2.5.0
          - `#220 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/220>`_

        * - Bump ansys/actions from 10.1.4 to 10.2.3
          - `#221 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/221>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Fix vale warning
          - `#210 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/210>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Workflows
          - `#6 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/6>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Restore pypi release step
          - `#4 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/4>`_

        * - Update CHANGELOG for v0.4.0
          - `#207 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/207>`_

        * - Fix permissions for doc deploy
          - `#208 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/208>`_

        * - Bump 0.5.dev0
          - `#209 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/209>`_

        * - Add action security checking
          - `#211 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/211>`_

        * - Update license to Apache-2.0
          - `#216 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/216>`_

        * - Fix condition in \`\`block-dependabot\`\` check
          - `#222 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/222>`_

        * - Review permissions for jobs in workflows and provide comments where needed
          - `#223 <https://github.com/ansys/ansys-aedt-toolkits-radar-explorer/pull/223>`_

.. vale on